Change type of routing slip to linked list